# reeln-dock

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md  tauri-ci.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dock_log.rs  main.rs  menu.rs  models.rs  state.rs  test_utils.rs  update_check.rs
src-tauri/src/commands/: config.rs  games.rs  hooks.rs  media.rs  mod.rs  plugins.rs  prompts.rs  queue.rs  render.rs  sports.rs  teams.rs  tournaments.rs
src-tauri/src/orchestration/: game_ops.rs  hook_executor.rs  mod.rs  progress.rs  render_ops.rs
src/lib/: context.ts  help.ts
src/lib/components/: CliGate.svelte  DragGhost.svelte  HelpLink.svelte  NewGameModal.svelte  SetupWizard.svelte  SplashScreen.svelte  TeamLogo.svelte  UpdateBanner.svelte
src/lib/components/content/: ClipPreview.svelte  ClipReviewPanel.svelte  ContentArea.svelte  DeleteGameModal.svelte  DynamicPluginFields.svelte  GameView.svelte  PrunePreviewModal.svelte  QueuePublishPanel.svelte  RenderPlaybackModal.svelte  (+5 more)
src/lib/ipc/: config.test.ts  config.ts  games.test.ts  games.ts  media.test.ts  media.ts  plugins.test.ts  plugins.ts  prompts.ts  queue.ts  render.test.ts  render.ts  teams.ts  tournaments.ts
src/lib/stores/: bridge.svelte.ts  cli.svelte.ts  config.svelte.ts  drag.svelte.ts  games.ts  jobs.svelte.ts  log.svelte.ts  navigation.ts  pluginUI.svelte.ts  pluginUI.test.ts  plugins.svelte.ts  renderQueue.svelte.ts  renderQueue.test.ts  teams.svelte.ts  tournaments.svelte.ts  uiPrefs.svelte.ts  updates.svelte.ts
src/lib/types/: config.ts  dock.ts  game.ts  hooks.ts  media.ts  plugin.ts  prompt.ts  queue.ts  render.ts  sport.ts  team.ts  tournament.ts
src/lib/utils/: color-extract.ts
(+24 files in other folders)
